docs: auth documentation swagger
